--- a/TranslationWindow.xaml
+++ b/TranslationWindow.xaml
@@ -1,16 +1,16 @@
 ﻿<Window x:Class="SelectAndTranslate.TranslationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
-        Title="MainWindow" Height="229" Width="198" AllowsTransparency="True" WindowStyle="None" Background="#FFE0EBF5" WindowStartupLocation="Manual" Loaded="Window_Loaded" ResizeMode="CanResizeWithGrip">
+        Title="MainWindow" Height="229" Width="198" AllowsTransparency="True" WindowStyle="None" Background="#FFE0EBF5" WindowStartupLocation="Manual" Loaded="Window_Loaded" ResizeMode="CanResizeWithGrip" BorderBrush="#FF6B77BB" BorderThickness="1">
     <Grid AllowDrop="True" Margin="0,10,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="31*"/>
             <RowDefinition Height="188*"/>
-        </Grid.RowDefinitions>        
+        </Grid.RowDefinitions>
         <Label Name="lblSource" Content="Label" Margin="10,4,10,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
         <Border Margin="10" Grid.Row="1" Background="#FFF7F7F7">
-            <ScrollViewer>
-                <TextBlock Name="textBlock" Margin="3" Grid.Row="1" Background="#FFF7F7F7" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True"></TextBlock>
+            <ScrollViewer BorderThickness="0">
+                <TextBlock Name="textBlock" Margin="3" Grid.Row="1" Background="#FFF7F7F7" TextWrapping="Wrap" ></TextBlock>
             </ScrollViewer>
         </Border>
     </Grid>
