--- a/OptionsWindow.xaml
+++ b/OptionsWindow.xaml
@@ -6,22 +6,20 @@
         Width="281"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
-        xmlns:local="clr-namespace:SelectAndTranslate"
         Icon="pack://application:,,,/img/logo32.png"
         ScrollViewer.VerticalScrollBarVisibility="Disabled"
         >
-    <!--        Icon="{x:Static local:Resources.Logo32BitmapSource}"-->
-    <Grid Name="grid" Margin="0,0,4,0" Height="203" VerticalAlignment="Top" IsHitTestVisible="True"  >
+    <Grid Margin="0,0,4,0" Height="203" VerticalAlignment="Top" IsHitTestVisible="True"  >
         <Grid.RowDefinitions>
             <RowDefinition Height="106*"/>
             <RowDefinition Height="70*"/>
             <RowDefinition Height="27*"/>
         </Grid.RowDefinitions>
         <GroupBox Header="Translators" Margin="10,10,10,0" VerticalAlignment="Top" Height="97" Grid.RowSpan="2" CheckBox.Checked="ChangesPerformed" CheckBox.Unchecked="ChangesPerformed">
-            <StackPanel Name="panelTranslators" Margin="10,10,10,0" Height="60" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                <CheckBox Name="chbGoogleTranslator" Content="Google Translator" Margin="0,0,0,3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="209" />
-                <CheckBox Name="chbYandexTranslator" Content="Yandex Translator" Margin="0,0,0,3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="209"/>
-                <CheckBox Name="chbBingTranslator" Content="Bing Translator  (may cause a stuck)" Margin="0,0,0,3" VerticalAlignment="Top" />
+            <StackPanel Margin="10,10,10,0" Height="60" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                <CheckBox Name="GoogleCheckBox" Content="Google Translator" Margin="0,0,0,3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="209" />
+                <CheckBox Name="YandexCheckBox" Content="Yandex Translator" Margin="0,0,0,3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="209"/>
+                <CheckBox Name="BingCheckBox" Content="Bing Translator" Margin="0,0,0,3" VerticalAlignment="Top" />
             </StackPanel>
         </GroupBox>
         <GroupBox Header="Translation languages" Margin="10,0" Grid.Row="1" Height="62" VerticalAlignment="Top">
@@ -34,12 +32,11 @@
                 </Grid.ColumnDefinitions>
                 <Label Content="From" Margin="0,0,0,5" Grid.Row="1" HorizontalAlignment="Right" Width="38"/>
                 <Label Content="To" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Height="26" Width="23" Grid.Row="1"/>
-                <ComboBox Name="cmbLanguagesFrom" Grid.Column="1" HorizontalAlignment="Left" Margin="5,5,0,0" Grid.Row="1" VerticalAlignment="Top" Width="50" Height="22"/>
-                <ComboBox Name="cmbLanguagesTo" Grid.Column="3" HorizontalAlignment="Left" Margin="5,4,0,0" Grid.Row="1" VerticalAlignment="Top" Width="50" Height="22"/>
-                
+                <ComboBox Name="LanguagesFrom" Grid.Column="1" HorizontalAlignment="Left" Margin="5,5,0,0" Grid.Row="1" VerticalAlignment="Top" Width="50" Height="22"/>
+                <ComboBox Name="LanguagesTo" Grid.Column="3" HorizontalAlignment="Left" Margin="5,4,0,0" Grid.Row="1" VerticalAlignment="Top" Width="50" Height="22"/>
             </Grid>
         </GroupBox>
-        <Button Name="btnCancel" Content="Cancel" Height="22" Margin="0,1,10,0" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="btnCancel_Click"/>
-        <Button Name="btnApply" Content="Apply" Margin="0,1,90,0" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="-0.44,0.727" Height="22" HorizontalAlignment="Right" Width="75" Click="btnApply_Click"/>
+        <Button Name="Cancel" Content="Cancel" Height="22" Margin="0,1,10,0" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="Cancel_Click"/>
+        <Button Name="Apply" Content="Apply" Margin="0,1,90,0" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="-0.44,0.727" Height="22" HorizontalAlignment="Right" Width="75" Click="Apply_Click"/>
     </Grid>
 </Window>
